--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">Remote Assistant</string>
+    <string name="please_auth">Пожалуйста, авторизуйтесь</string>
+    <string name="lets_create_account">Давай создадим тебе аккаунт</string>
+    <string name="glad_to_see_you">Рады снова тебя видеть!</string>
+    <string name="email">Электронная почта</string>
+    <string name="password">Пароль</string>
+    <string name="username">Логин</string>
+    <string name="name_surname">Имя фамилия</string>
+    <string name="login">Авторизоваться</string>
+    <string name="or">или</string>
+    <string name="already_have_account_login">Уже есть аккаунт? Войти</string>
+    <string name="next">Далее</string>
+    <string name="confirmation_code">Код подтверждения:</string>
+    <string name="forget_account">Забыли аккаунт? Восстановить</string>
+    <string name="search">Поиск studentcare</string>
+    <string name="interesting">Интересное</string>
+    <string name="item_sale">Товар по акции</string>
+    <string name="get_sale">Получить скидку</string>
 </resources>
